corpus/cpp/three_way_comparison/case-01/snapshots/gcc13_14/single_sink_structured/render.ci.txt
src/main.cpp:6:18: error: [three_way_comparison] three-way comparison (spaceship) operator error
help: ensure all members support <=> or provide a custom comparison operator
raw : no match for ‘operator<=>’ (operand types are ‘Widget’ and ‘Widget’)
| src/main.cpp:6:18
|     return (left <=> right) == 0;
|                  ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output